<resources>
    <string name="app_name">AutoQuest</string>
    <string name="developer_name">Кукушкин Алексей Олегович</string>
    <string name="studentGroup">ИКБО-13-22</string>
    <string name="development_year">2024</string>
    <string name="developer_email">kukuon04@gmail.com</string>
    <string name="aboutProgramButtonInfo">See info about program</string>
    <string name="AddOfferButtonInfo">Add new car sale offer</string>
    <string name="AboutAuthorButtonInfo">See info about app developer</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="continueWord">Продолжить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="create">Создать</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="home">Главная</string>
    <string name="chats">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="already_have_account">Уже зарегистрированы?</string>
    <string name="enter1">Войти</string>
    <string name="not_loginned">Вы не вошли в систему</string>
    <string name="description">Описание</string>
    <string name="new_offer">Новое объявление</string>
    <string name="brand">Марка</string>
    <string name="Photos">Фотографии</string>
    <string name="choose_images">Выбрать изображения</string>
    <string name="upload">Выгрузить</string>
    <string name="my_offers">Мои объявления</string>
    <string name="continue_withot_login">Продолжить без входа</string>
    <string name="save">Сохранить</string>
    <string name="information">Инфо</string>
    <string name="about_program">О программе</string>
    <string name="program_description">AutoQuest - мобильное приложение, разработанное для помощи пользователям в поиске и подборе идеального автомобиля. Приложение сочетает в себе удобство, скорость и точность, предоставляя множество функций, чтобы сделать процесс выбора авто максимально простым и приятным.</string>
    <string name="usage_instraction">Инструкция по использованию</string>
</resources>