<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_main"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="50sp"
            android:fontFamily="@font/kanit_regular"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_bottom_bar"
            android:layout_margin="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:backgroundTint="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:fontFamily="@font/rubik_light"
                    android:textStyle="bold"
                    android:textSize="36sp"/>

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik_medium"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="8dp"/>

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik_medium"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="8dp"/>

                <ImageButton
                    android:id="@+id/acceptButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_button_background"
                    android:src="@drawable/enter_svgrepo_com"
                    android:scaleType="fitCenter"/>

                <Button
                    android:id="@+id/continueWithoutAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A0A0A0"
                    android:text="@string/continue_withot_login"
                    android:fontFamily="@font/rubik_medium"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/resetPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A0A0A0"
                    android:text="Восстановить пароль"
                    android:fontFamily="@font/rubik_medium"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:fontFamily="@font/rubik_medium"
                android:layout_margin="5dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/create"
                android:textSize="17sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/color_bottom_bar"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
