<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:backgroundTint="@color/color_bottom_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="Регистрация"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:autofillHints="name"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/user_svg"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:autofillHints="phone"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:hint="@string/phone_number"
                    android:inputType="phone|number"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="60dp"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/avatarImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_main"
                        android:scaleType="centerCrop"
                        android:padding="10dp"
                        android:src="@drawable/image_plus_svgrepo_com_"/>
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/acceptButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_button_background"
                    android:contentDescription="Применить"
                    android:scaleType="fitCenter"
                    android:src="@drawable/check_svg" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:layout_margin="5dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/color_bottom_bar"
                android:text="@string/enter1"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
